// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using System.ComponentModel.DataAnnotations;
using System.ComponentModel.DataAnnotations.Schema;
using Microsoft.EntityFrameworkCore;

namespace NationsLeague.Models
{
    [Table("Nationsleague")]
    [Index("Name", Name = "UQ__Nationsl__737584F6609B3139", IsUnique = true)]
    public partial class Nationsleague
    {
        public Nationsleague()
        {
            Teams = new HashSet<Team>();
        }

        [Key]
        public int Id { get; set; }
        [Required]
        [StringLength(200)]
        [Unicode(false)]
        public string Name { get; set; }
        [Column(TypeName = "date")]
        public DateTime CreatedOn { get; set; }
        public int NationalityId { get; set; }

        [ForeignKey("NationalityId")]
        [InverseProperty("Nationsleagues")]
        public virtual Nationality Nationality { get; set; }
        [InverseProperty("Nationsleague")]
        public virtual ICollection<Team> Teams { get; set; }
    }
}